--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <div class="container">
             <div class = "row">
                 <div class="col-sm-6">
-                    <img class="img-fluid" style="max-width: 100%; height= auto" src="assets/anthony-1.JPG">
                 </div>
                 <div class="col-sm-6">
                     <h2>Hello World!</h2>
                     <br>
-                    <p>My name is Joseph Widjaja</p>
+                    <p>Hello there</p>
                 </div>
             </div>
         </div>
