--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="index.html">Projects</a>
                         </div>
                         <div class="col headerTop">
-                            <a href="#">Resume</a>
+                            <a href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
                         </div>
                         <div class="col headerTop">
                             <a href="#">About Me</a>
