--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,34 +17,32 @@
 <body>
     <!-- <nav id="nav-placeholder"></nav> -->
     <div class="container topNav">
-        <nav>
-            <div class="row">
-                <div class="col-3 headerTop">
-                    <h1>Joseph Widjaja</h1>
-                </div>
+        <div class="row childNav">
+            <div class="col-3 childNav">
+                <h1>Joseph Widjaja</h1>
+            </div>
 
-                <div class="col-4">
-                </div>
+            <div class="col-4">
+            </div>
 
-                <div class="col-1">
-                    <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github"
-                            style="font-size:30px"></i></a>
-                </div>
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col headerTop">
-                            <a href="index.html">Projects</a>
-                        </div>
-                        <div class="col headerTop">
-                            <a href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
-                        </div>
-                        <div class="col headerTop">
-                            <a href="aboutMe.html">About Me</a>
-                        </div>
+            <div class="col-1 childNav">
+                <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github icons"
+                        style="font-size:30px"></i></a>
+            </div>
+            <div class="col-4 childNav">
+                <div class="row childNav ">
+                    <div class="col ">
+                        <a href="index.html">Projects</a>
+                    </div>
+                    <div class="col ">
+                        <a href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
+                    </div>
+                    <div class="col ">
+                        <a href="aboutMe.html">About Me</a>
                     </div>
                 </div>
             </div>
-        </nav>
+        </div>
     </div>
 
     <div class="container">
