separate nav bar

--- a/index.html
+++ b/index.html
@@ -13,47 +13,21 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Joseph Widjaja</title>
 </head>
 
 <body>
-    <!-- <nav id="nav-placeholder"></nav> -->
-    <div class="container topNav">
-        <div class="row childNav">
-            <div class="col-3 childNav">
-                <h1>Joseph Widjaja</h1>
-            </div>
-
-            <div class="col-4">
-            </div>
-
-            <div class="col-1 childNav">
-                <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github icons"
-                        style="font-size:30px"></i></a>
-            </div>
-            <div class="col-4 childNav">
-                <div class="row childNav ">
-                    <div class="col ">
-                        <a href="index.html">Projects</a>
-                    </div>
-                    <div class="col ">
-                        <a href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
-                    </div>
-                    <div class="col ">
-                        <a href="aboutMe.html">About Me</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <nav id="nav-placeholder"></nav>
 
     <div class="container">
         <hr>
 
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <div id="Carousel1" class="carousel slide" data-ride="carousel">
+                <div class="col-sm-6">
+                    <div id="Carousel1" class="carousel slide" data-ride="carousel" style="max-width: 100%; min-height: 500px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/TicTacToeGame.png" alt="First slide">
@@ -84,7 +58,7 @@
 
                 </div>
 
-                <div class="col">
+                <div class="col-sm-6">
                     <h2>Multiplayer Tic Tac Toe</h2>
                     <p><a href="https://github.com/jwidjaja0/GameClient">Source Code</a></p>
                     <p>Multiplayer TicTacToe game where player can play games with other players or computer AI.
@@ -101,8 +75,8 @@
             </div>
 
             <div class="row">
-                <div class="col descript">
-                    <div id="Carousel2" class="carousel slide" data-ride="carousel">
+                <div class="col-sm-6 descript">
+                    <div id="Carousel2" class="carousel slide" data-ride="carousel" style="max-width: 100%; min-height: 500px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/TTT_Server.png" alt="First slide">
@@ -128,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="col descript">
+                <div class="col-sm-6 descript">
                     <h2>Multiplayer Tic Tac Toe - Server</h2>
                     <p><a href="https://github.com/jwidjaja0/GameServer">Source Code</a></p>
                     <p>Server part of the Multiplayer TicTacToe game. Server can monitor all active players and all
@@ -146,17 +120,17 @@
 
     </div>
 
-    <!-- <script>
+    <script>
         $(function () {
             $("#nav-placeholder").load("nav.html");
         });
-    </script> -->
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
