--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,50 +11,24 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <title>About Me</title>
     </head>
 
 <body>
-    <!-- <nav id="nav-placeholder"></nav> -->
-    <div class="container topNav">
-        <div class="row childNav">
-            <div class="col-3 childNav">
-                <h1>Joseph Widjaja</h1>
-            </div>
-
-            <div class="col-4">
-            </div>
-
-            <div class="col-1 childNav">
-                <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github icons"
-                        style="font-size:30px"></i></a>
-            </div>
-            <div class="col-4 childNav">
-                <div class="row childNav ">
-                    <div class="col ">
-                        <a href="index.html">Projects</a>
-                    </div>
-                    <div class="col ">
-                        <a href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
-                    </div>
-                    <div class="col ">
-                        <a href="aboutMe.html">About Me</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <nav id="nav-placeholder"></nav>
 
     <div class="container">
         <hr>
         
         <div class="container">
             <div class="row">
-              <div class="col">
-                <img class="picMe" src="resources/JWidj1.jpg">
+              <div class="col-sm-6" style="text-align: center;">
+                <img class="img-fluid" style="max-width: 70%; height: auto; " src="resources/JWidj1.jpg">
               </div>
       
-              <div class="col">
+              <div class="col-sm-6">
                 <h2>Hello World</h2>
                 <p>I am a computer science student at Saddleback College, currently seeking a software engineer/developer internship/junior role. </p> 
                 <p></p>
@@ -64,17 +38,17 @@
             </div>
     </div>
 
-    <!-- <script>
+    <script>
         $(function () {
             $("#nav-placeholder").load("nav.html");
         });
-    </script> -->
+    </script>
 
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
