--- a/test.html
+++ b/test.html
@@ -1,35 +1,59 @@
-<div class="container topNav">
-    <nav>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navbar</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+</head>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <span class="navbar-brand">Joseph Widjaja</span>
+        <span>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github nav-link"
+                        style="font-size:30px; text-align: center;"></i></a>
+                </li>
+            </ul>
+        </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutMe.html">About Me</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div class="row">
-        <div class="col-3 headerTop">
-            <h1>Joseph Widjaja</h1>
-        </div>
-        <div class="col-4">
 
-        </div>
-        <div class="col-1">
-            <a href="https://github.com/jwidjaja0" target="blank"><i class="fa fa-github"
-                    style="font-size:30px"></i></a>
-        </div>
 
-        <div class="col-4">
 
-            <div class="row">
-                <div class="col headerTop">
-                    <a href="portfolio.html">Projects</a>
-                </div>
 
-                <div class="col headerTop">
-                    <a href="projects.html">Resume</a>
-                </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
-                <div class="col headerTop">
-                    <a href="projects.html">About Me</a>
-                </div>
-            </div>
+</body>
 
-        </div>
-    </div>
+</html>
