--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <img class="d-block w-100" src="resources/TicTacToeGame.png" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/MainLanding.png" alt="Second slide">
+                                <img class="d-block w-100" src="resources/ClientMain.png" alt="Second slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/Draw.png" alt="Third slide">
@@ -105,7 +105,7 @@
                     <div id="Carousel2" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="resources/TTT_Server.png" alt="First slide">
+                                <img class="d-block w-100" src="resources/ServerMain.png" alt="First slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/AllGames_Server.png" alt="Second slide">
