--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/Draw.png" alt="Third slide">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item item">
                                 <img class="d-block w-100" src="resources/PersonalRecord.png" alt="Fourth slide">
                             </div>
                             <div class="carousel-item">
@@ -75,7 +75,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6 descript">
+                <div class="col-sm-6">
                     <div id="Carousel2" class="carousel slide" data-ride="carousel" style="max-width: 100%; min-height: 600px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
