--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="Carousel1" class="carousel slide" data-ride="carousel" style="max-width: 100%; min-height: 600px;">
+                    <div id="Carousel1" class="carousel slide" data-ride="carousel" style="min-height: 500px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/TicTacToeGame.png" alt="First slide">
@@ -76,7 +76,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="Carousel2" class="carousel slide" data-ride="carousel" style="max-width: 100%; min-height: 600px;">
+                    <div id="Carousel2" class="carousel slide" data-ride="carousel" style="min-height: 330px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/ServerMain.png" alt="First slide">
