--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,15 +17,16 @@
     </head>
 
 <body>
-    <nav id="nav-placeholder"></nav>
+    <nav id="nav-placeholder" style="padding-bottom: 1%;"></nav>
 
-    <div class="container">
+    <div class="container" >
+        <h1>About Me</h1>
         <hr>
         
         <div class="container">
             <div class="row">
               <div class="col-sm-6" style="text-align: center;">
-                <img class="img-fluid" style="max-width: 70%; height: auto; " src="resources/JWidj1.jpg">
+                <img class="img-fluid" style="max-width: 70%; height: auto; border-radius: 5%; " src="resources/JWidj1.jpg">
               </div>
       
               <div class="col-sm-6">
