--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
 </head>
 
 <body>
-    <nav id="nav-placeholder"></nav>
+    <nav id="nav-placeholder" style="padding-bottom: 1%;"></nav>
 
     <div class="container">
+        <h1>
+            Projects
+        </h1>
         <hr>
 
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="Carousel1" class="carousel slide" data-ride="carousel" style="min-height: 470px;">
+                    <div id="Carousel1" class="carousel slide" data-ride="carousel" style="min-height: 480px; ">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/TicTacToeGame.png" alt="First slide">
@@ -58,7 +61,7 @@
 
                 </div>
 
-                <div class="col-sm-6">
+                <div class="col-sm-6" style="min-height: 35em;">
                     <h2>Multiplayer Tic Tac Toe</h2>
                     <p><a href="https://github.com/jwidjaja0/GameClient">Source Code</a></p>
                     <p>Multiplayer TicTacToe game where player can play games with other players or computer AI.
@@ -76,7 +79,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="Carousel2" class="carousel slide" data-ride="carousel" style="min-height: 330px;">
+                    <div id="Carousel2" class="carousel slide" data-ride="carousel" style="min-height: 360px;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/ServerMain.png" alt="First slide">
@@ -102,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 descript">
+                <div class="col-sm-6" style="min-height: 30em;">
                     <h2>Multiplayer Tic Tac Toe - Server</h2>
                     <p><a href="https://github.com/jwidjaja0/GameServer">Source Code</a></p>
                     <p>Server part of the Multiplayer TicTacToe game. Server can monitor all active players and all
