--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="index.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resources/JW_Resume.pdf">Resume</a>
+                    <a class="nav-link" href="resources/Joseph_Widjaja_Resume.pdf">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutMe.html">About Me</a>
